header finalized and spacer added

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -30,14 +30,21 @@ html {
   display: flex;
 }
 
-
+.spacer {
+  margin: auto;
+  width: 100%;
+  height: 100px;
+}
 
 main {
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
   margin: auto;
   width: 80%;
-  font-size: 2.5rem;
+}
+
+.top-content {
+  font-size: 2rem;
   background-color: rgba(217, 176, 140, 0.5);
+  padding: 20px 20px;
 }
