--- a/css/index.css
+++ b/css/index.css
@@ -126,15 +126,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-header {
-  font-size: 2.5rem;
-  display: flex;
-  justify-content: space-around;
+.navbar {
+  justify-content: space-between;
   font-family: "Montserrat", sans-serif;
   color: #d9b08c;
   padding: 10px 10px;
-}
-.navbar {
+  font-size: 2.25rem;
   display: flex;
   overflow: hidden;
   background-color: #2c3531;
@@ -153,12 +150,11 @@ header {
 .navbar .txt {
   display: flex;
   text-transform: lowercase;
-  font-size: 2.5rem;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 40%;
 }
 .social {
-  width: 20%;
+  margin-right: 5%;
 }
 /* The navigation bar */
 /* Links inside the navbar */
@@ -191,12 +187,19 @@ html {
   margin: auto;
   display: flex;
 }
+.spacer {
+  margin: auto;
+  width: 100%;
+  height: 100px;
+}
 main {
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
   margin: auto;
   width: 80%;
-  font-size: 2.5rem;
+}
+.top-content {
+  font-size: 2rem;
   background-color: rgba(217, 176, 140, 0.5);
+  padding: 20px 20px;
 }
