--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,37 +1,34 @@
-header {
-    font-size: 2.5rem;
-    display: flex;
-    justify-content: space-around;
-    font-family: "Montserrat", sans-serif;
-    color: #d9b08c;
-    padding: 10px 10px;
-  }
-
 .navbar {
-    display: flex;
-    overflow: hidden;
-    background-color: #2c3531;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    margin-bottom: 20px;
-    a {
-      color: #d9b08c;
-      text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Montserrat", sans-serif;
+  color: #d9b08c;
+  padding: 10px 10px;
+  font-size: 2.25rem;
+  display: flex;
+  overflow: hidden;
+  background-color: #2c3531;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin-bottom: 20px;
+  a {
+    color: #d9b08c;
+    text-decoration: none;
     //   width: 40%;
-      &:hover {
-        color: #ffcb9a;
-      }
-    }
-    .txt {
-      display: flex;
-      text-transform: lowercase;
-      font-size: 2.5rem;
-      justify-content: space-around;
-      width: 40%;
+    &:hover {
+      color: #ffcb9a;
     }
   }
+  .txt {
+    display: flex;
+    text-transform: lowercase;
+    justify-content: space-between;
+    width: 40%;
+  }
+}
 
-  .social {
-    width: 20%;
-  }
+.social {
+  // width: 20%;
+  margin-right: 5%;
+}
