--- a/less/home-page.less
+++ b/less/home-page.less
@@ -41,10 +41,35 @@ main {
   flex-direction: column;
   margin: auto;
   width: 80%;
-}
 
-.top-content {
-  font-size: 2rem;
-  background-color: rgba(217, 176, 140, 0.5);
-  padding: 20px 20px;
+  .top-content {
+    font-size: 1.8rem;
+    background-color: rgba(217, 176, 140, 0.9);
+    padding: 20px 40px;
+
+    h1 {
+      display: flex;
+      font-size: 4rem;
+      font-family: "Teko", sans-serif;
+      justify-content: center;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
+    h2 {
+      display: flex;
+      justify-content: center;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
+
+    p {
+      display: flex;
+      justify-content: center;
+      line-height: 1.4;
+      font-family: "Montserrat", sans-serif;
+    }
+    img {
+    }
+  }
 }
