final commit of the night august 10

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -45,6 +45,7 @@ main {
   .top-content {
     font-size: 1.8rem;
     background-color: rgba(217, 176, 140, 0.9);
+    // border-radius: 25px;
     padding: 20px 40px;
 
     h1 {
